--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
